[build-system]
requires = ["setuptools>=66.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pycleps"
version = "0.0.0"
description = "A tool to submit SLURM jobs to INRIA clusters using SSH."
readme = "README.md"
requires-python = ">= 3.9"


[project.scripts]
pycleps = "pycleps.main:run"